# PowerCapslock

./: .gitignore  BUILD_GUIDE.md  BUILD_SUCCESS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  ENCODING_FIX_REPORT.md  FUNCTION_FIX_REPORT.md  README.md  TODO.md  TRAY_FEATURE.md  TRAY_FIX_REPORT.md  index.html
config/: config.json  keymap.json
docs/: ocr-selection-automated-test-design.md  ocr-selection-design-plan.md
docs/releases/: v0.1.2.preview.md  v0.4.3.preview.md
docs/superpowers/plans/: 2026-04-13-action-config-redesign.md
docs/superpowers/specs/: 2026-04-13-action-config-redesign.md
installer/: PowerCapslock.iss  PowerCapslock.wxs  build-installer.bat  build-package.ps1
resources/: config_ui.html  resource.rc
scripts/: build.bat  build_simple.bat  build_with_resources.bat  diagnose.bat  install.bat  install_release.bat  package_release.ps1  test_tray.bat  uninstall.bat  uninstall_release.bat
src/: action.c  action.h  action_builtin.c  action_builtin.h  audio.c  audio.h  config.c  config.h  config_dialog.c  config_dialog.h  config_dialog_webview.cpp  hook.c  hook.h  keyboard_layout.c  keyboard_layout.h  keymap.c  keymap.h  logger.c  logger.h  main.c  screenshot.c  screenshot.h  screenshot_annotate.c  screenshot_annotate.h  screenshot_float.c  screenshot_float.h  screenshot_manager.c  screenshot_manager.h  screenshot_ocr.c  screenshot_ocr.h  screenshot_ocr_selection.c  screenshot_ocr_selection.h  screenshot_ocr_tesseract.c  screenshot_overlay.c  screenshot_overlay.h  screenshot_toolbar.c  screenshot_toolbar.h  tray.c  tray.h  voice.c  (+3 more)
test/: README_CONFIG_FUNCTION_TEST.md  capslock_a_self_test.py  config_function_test.py  screenshot_function_test.py  screenshot_ocr_selection_test.py  test_capslock_a_bug.py  webview_config_test.py
test/cases/: testcase_1.txt
test/output/: backup_config.json  test_report.md
test/scripts/: analyze_screenshot.py  full_test.py  run_audio_test.py  test_config_dialog.py
